
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int EXIT_FAILURE ;
 scalar_t__ LUDATA_SEL ;
 int exit (int ) ;
 int i386_set_ldt (scalar_t__,int *,int) ;
 int perror (char*) ;

int main(int argc,char **argv){

    if(i386_set_ldt(LUDATA_SEL+1,((void*)0),-1)==-1){
        perror("i386_set_ldt");
        exit(EXIT_FAILURE);
    }

    exit(EXIT_FAILURE);
}
